[package]
name = "tron_address"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.28", features = ["rand"] }
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"
rand = "0.8"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
num_cpus = "1.16"
